--- a/styles.css
+++ b/styles.css
@@ -16,31 +16,31 @@ footer {
 }
 
 .s {
-  background-image: url("images/tom1.png");
+  background-image: url("tom1.png");
 }
 
 .o {
-  background-image: url("images/tom2.png");
+  background-image: url("tom2.png");
 }
 
 .n {
-  background-image: url("images/tom3.png");
+  background-image: url("tom3.png");
 }
 
 .u {
-  background-image: url("images/tom4.png");
+  background-image: url("tom4.png");
 }
 
 .c {
-  background-image: url("images/crash.png");
+  background-image: url("crash.png");
 }
 
 .a {
-  background-image: url("images/kick.png");
+  background-image: url("kick.png");
 }
 
 .t {
-  background-image: url("images/snare.png");
+  background-image: url("snare.png");
 }
 
 .set {
